<resources>
    <string name="app_name">QURAN Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get started</string>
    <string name="sign_in">Sign In</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="don_t_have_">Don\'t have an account ?</string>
    <string name="register_here"> Register here</string>

</resources>